8164832: javapackager testsuite modifications for below mentioned issues
Reviewed-by: cbensen